@@ -1,8 +1,9 @@
 ags (3.14.15)
 
 	[ Joël Krähemann (Maintainer of Advanced Gtk+ Sequencer) ]
-	* enabled UI for AgsVst3Bridge
+	* implemented UI for AgsVst3Bridge
 	* fixed missing update of prefixed macros in build files
+	* improved block scope of AgsLv2Bridge
 
 ags (3.14.14)
 
